fix panel z-index

--- a/packages/editor/src/components/EditorContainer.css
+++ b/packages/editor/src/components/EditorContainer.css
@@ -13,7 +13,6 @@
 
 .dock-panel:first-child {
   position: relative;
-  z-index: 99;
 }
 
 .dock-panel[data-dockid='+5'] {
